Ajustando validações e refatorando código